src/test/deca/syntax/valid/test_synt/class/instance_of_test_v1.deca
// Description:
//    Test de declaration d'une classe fils et une class pere avec un instanceof de syntaxe correcte
//
// Resultats:
//    Lexeur: pas d'erreur
//    Parseur: pas d'erreur --> meme avec des nom comme bla et ble avec instanceof ça marche là
//                              puisque on test juste la syntaxe
//
// Historique:
//    cree le 20/01/2022



class Dad{
   boolean myDad = true;
}

class Son extends Dad{}

{
  Dad d = new Dad();
  Son s = new Son();

  if(bla  instanceof ble)
    {
      print("you found ur dad") ;
    }
}
